# legal-workspace-mcp

./: .gitignore  README.md  claude_desktop_config_example.json  pyproject.toml  setup_github.sh
.claude/: CLAUDE.md
src/: CLAUDE.md
src/legal_workspace_mcp/: CLAUDE.md  __init__.py  config.py  extractors.py  indexer.py  server.py  watcher.py
