[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legal-workspace-mcp"
version = "0.1.0"
description = "An MCP server that provides self-updating context from a local document workspace to Claude, optimized for legal drafting workflows."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "watchdog>=4.0.0",
    "scikit-learn>=1.4.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "chardet>=5.0.0",
]

[project.scripts]
legal-workspace-mcp = "legal_workspace_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/legal_workspace_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/"]
