[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legal-workspace-mcp"
version = "0.2.0"
description = "An MCP server that provides self-updating context from a local document workspace to Claude, optimized for legal drafting workflows."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "mcp", "model-context-protocol", "claude", "legal", "documents",
    "search", "fts5", "bm25", "workspace", "anthropic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Office/Business",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "watchdog>=4.0.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "chardet>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/gwicho38/legal-workspace-mcp"
Repository = "https://github.com/gwicho38/legal-workspace-mcp"
Issues = "https://github.com/gwicho38/legal-workspace-mcp/issues"

[project.scripts]
legal-workspace-mcp = "legal_workspace_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/legal_workspace_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/"]
